可以使用配置文件

--- a/configure.json
+++ b/configure.json
@@ -1,1 +1,1 @@
-{"url":"https://cdn.seclusion.work/public/video/DNA%20乱了.mp4","ini_set":"1024M","set_time_limit":"600"}
+{"url":"https://cdn.seclusion.work/public/video/","ini_set":"1024M","set_time_limit":"600"}
